# paperless-hook-bart

./: .gitignore  README.md  pyproject.toml
cmd/: post_consume_script.py
commands/: backfill.py  post_consume_script.py  search.py
paperless_hook_bart/: embeddings.py  paperless_client.py  processor.py  settings.py  vector_store.py
tests/: conftest.py  test_embeddings.py  test_vector_store.py
