[tool.poetry]
name = "paperless-hook-bart"
version = "0.1.0"
description = "A script that pairs with Paperless-ngx to enable semantic search with BART."
authors = ["Andrew Fiorillo <andrewmfiorillo@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "paperless_hook_bart" }]

[tool.poetry.scripts]
post_consume_script = 'commands.post_consume_script:typer_main'

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.3.0"
typer = "^0.9.0"
pydantic-settings = "^2.0.3"
requests = "^2.31.0"
pandas = "^2.1.0"
transformers = { extras = ["torch"], version = "^4.36.0" }
# we need to explicitly avoid this version of pytorch because of a bug
# https://github.com/pytorch/pytorch/issues/100974
torch = "!=2.0.1"
pyarrow = "^13.0.0"
rich = "^13.5.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
